dvisvgm-3.2.1 (2024-02-29)
- delayed loading of Ghostscript library to speed up the conversion of
  DVI files	without PS specials (GH issue #262)
- some improvements required for TeX Live builds
  (patches by Karl Berry, GH issues #259, #260)
- added more details to some DVI warning messages
- added some further information to the manual page

dvisvgm-3.2 (2024-01-11)
- PDF handler: fixed a rounding issue that could lead to slightly bigger
  text extents (GH issue #256)
- added macros {?pageno}, {?svgfile}, and {?svgpath} to the dvisvgm special
  commands
- added separate verbosity flag 8 for user messages printed by special
  dvisvgm:message
- added command-line option --message to allow for printing user messages
  after writing an SVG file (GH issue #258)
- applied upstream patch regarding undefined type punning to the bundled
  woff2 library
- few improvements of the manual page

dvisvgm-3.1.2 (2023-10-12)
- improved evaluation of graphic extents created by the 'preview' package
  (GH issue #246)
- fixed computation of character boxes when using --exact-bbox (GH issue #248)
- fixed memory error in optimizer module (GH issue #250)
- updated bundled brotli library to version 1.1.0

dvisvgm-3.1.1 (2023-08-29)
- added evaluation of optional dash prefixes to command-line option --optimize
  to exclude selected optimizer modules
- fixed invalid removal of clipping paths referenced in 'defs' section
- fixed automatic calls of optimizer module 'remove-clippaths'
- suppress Ghostscript warning about deprecated option -dNEWPDF (GH issue #245)
- updated bundled xxHash library to version 0.8.2
- few fixes in the manual page

dvisvgm-3.1 (2023-07-06)
- added command-line option --currentcolor to replace a given color with
  CSS variable 'currentColor' (GH issue #214)
- added special dvisvgm:currentcolor to replace the currently active color
  with CSS variable 'currentColor' (GH issue #214)
- added special 'dvisvgm:message' to print given texts to the console