@@ -1,4 +1,4 @@
-version: 3.2.1-{build}
+version: 3.2.2-{build}
 configuration: Release
 
 image: Visual Studio 2022
