@@ -1,7 +1,7 @@
 #include <winver.h>
 
-#define DVISVGM_VERSION 3,2,1,0
-#define DVISVGM_VERSION_STR "3.2.1\0"
+#define DVISVGM_VERSION 3,2,2,0
+#define DVISVGM_VERSION_STR "3.2.2\0"
 
 VS_VERSION_INFO  VERSIONINFO
   FILEVERSION    DVISVGM_VERSION
